<resources>
    <string name="app_name">Gestion De Reservas</string>
    <string name="documento">Numero de documento</string>
    <string name="contra">Contraseña</string>
    <string name="inicioSesion">Iniciar sesion</string>
    <string name="olvidaste">¿Olvidaste tu contraseña?</string>
    <string name="txtRecuperarcontrasena">Ingresa el correo electrónico asociado a tu cuenta y te enviaremos un correo electrónico con instrucciones para restablecer tu contraseña.</string>
    <string name="txtVolver">Volver</string>
    <string name="txtRecuperarContrasena">Recuperar contraseña</string>
    <string name="txtcorreo_electronico">Correo electrónico</string>
    <string name="txtenviar_instrucciones">Enviar instrucciones</string>
    <string name="logo_sena">Logo SENA</string>
    <string name="verContra">Ver contraseña\n</string>
    <string name="ic_correo_enviado">Ícono de correo enviado</string>
    <string name="txtrevisacorreo">Revisa tu correo</string>
    <string name="txt_instruccioncorreo">Te hemos enviado instrucciones\npara recuperar tu contraseña a tu\ncorreo electrónico</string>
    <string name="txtabrirgmail">Abrir Gmail</string>
    <string name="txt_reenviarinstruccion">¿No recibiste un correo? Reenvía la instrucción dando</string>
    <string name="txt_clickaqui">click aquí</string>
    <string name="txt_otrocorreo">O prueba con otra\ndirección de correo electrónico</string>
    <string name="txt_crearNuevaContra">Crear nueva contraseña</string>
    <string name="txt_nuevaContrasena">Tu nueva contraseña debe ser diferente de las contraseñas utilizadas anteriormente.</string>
    <string name="conf_contra">Confirmar contraseña</string>
    <string name="restablecer_contra">Restablecer contraseña</string>
    <string name="miPerfil">Mi Perfil</string>
    <string name="miReservas">Mis Reservas</string>
    <string name="nombre">Nombre:</string>
    <string name="telefono">Telefono:</string>
    <string name="correo">Correo:</string>
    <string name="txtMisReservas">Mis Reservas</string>
    <string name="filtrar">Filtrar busqueda</string>
    <string name="equiposComputo">Equipos de Computo</string>
    <string name="imgItem">equipos</string>
    <string name="ambiente">Ambientes</string>
    <!--<<<<<<< HEAD-->
    <string name="bienvenido">¡Bienvenid@!</string>
    <string name="disrecursos">Recursos Disponibles</string>
    <string name="txt_notificacion">notificacion</string>
    =======
    <string name="txtSolicitudReservas">Solicitud de reservas</string>
    <string name="nombreAmbiente">Ambiente:</string>
    <string name="fecha">Fecha:</string>
    <string name="jornada">Jornada:</string>
    <string name="Mañana">Mañana</string>
    <string name="Tarde">Tarde</string>
    <string name="Noche">Noche</string>
    <string name="nombreRecurso">Recurso:</string>
    <string name="nombreEquipo">Equipo de computo:</string>
    <string name="SolicitadoPor">Solicitado por:</string>
    <string name="Referencia">Referencia:</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    >>>>>>> ba3dc9a3d71f43bb6e82a4d2b1080a05966b4c7f
</resources>