<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutCorreoEnviado"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="24dp"
    tools:context=".RCCorreoEnviado">

    <!-- Ícono de correo -->
    <ImageView
        android:id="@+id/ivMailIcono"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_correo_enviado"
        android:contentDescription="@string/ic_correo_enviado"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="110dp" />

    <!-- Título -->
    <TextView
        android:id="@+id/tvRevisaTuCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtrevisacorreo"
        android:textSize="24sp"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ivMailIcono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <!-- Subtítulo -->
    <TextView
        android:id="@+id/tvMensajeRecuperacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_instruccioncorreo"
        android:textSize="16sp"
        android:textColor="#666666"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvRevisaTuCorreo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Botón Abrir Gmail -->
    <Button
        android:id="@+id/btnAbrirGmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txtabrirgmail"
        android:textAllCaps="false"
        android:backgroundTint="#00AF00"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvMensajeRecuperacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="32dp" />

    <!-- Texto de reenvío -->
    <TextView
        android:id="@+id/tvReenviarInstruccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_reenviarinstruccion"
        android:textSize="14sp"
        android:textColor="#666666"
        app:layout_constraintTop_toBottomOf="@id/btnAbrirGmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <!-- Click aquí -->
    <TextView
        android:id="@+id/tvClickAqui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:text="@string/txt_clickaqui"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:contextClickable="true"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/tvReenviarInstruccion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Texto de otra dirección -->
    <TextView
        android:id="@+id/tvOtraDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_otrocorreo"
        android:textSize="14sp"
        android:textColor="#666666"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvClickAqui"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
