<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/nombre"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/tvNomUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="25dp"
        android:textColor="@color/txt_color"
        android:textSize="28sp"/>

    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/telefono"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/tvInfoTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="25dp"
        android:textColor="@color/txt_color"
        android:textSize="28sp"/>

    <TextView
        android:id="@+id/tvCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/correo"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/tvInfoCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="25dp"
        android:textColor="@color/txt_color"
        android:textSize="28sp"/>

    <ImageButton
        android:id="@+id/btnPerfil"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="300dp"
        android:layout_marginTop="10pt"
        android:backgroundTint="@color/colorBtns"
        android:textAlignment="center"
        android:src="@drawable/ic_edit"
        android:textColor="@color/white" />

</LinearLayout>